# li2utils

./: .gitignore  Cargo.toml  README.md
src/: li2fingerprint.rs  li2sign.rs  li2verify.rs  main.rs
