[package]
name = "li2utils"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
authors = ["Ville Sundell <development@solarius.fi>"]
homepage = "https://github.com/villesundell/li2utils"
repository = "https://github.com/villesundell/li2utils"
description = "Simple signer/verifier for FIPS 204 / CRYSTALS-Dilithium post quantum cryptography (PQC). Not verified / audited (WIP)!"

[[bin]]
name = "li2sign"
path = "src/li2sign.rs"

[[bin]]
name = "li2verify"
path = "src/li2verify.rs"

[dependencies]
fips204 = { version = "0.4.6", features = ["ml-dsa-44", "default-rng"]}
hex = "0.4"
